--- a/resume-style.css
+++ b/resume-style.css
@@ -7,10 +7,7 @@ html, body, h1, h2, h3, p, ol, ul, li, a {
 body {
 	font-family: Arial, "Times New Roman", sans-serif;
 	padding: 10px 30px 10px 30px;
-	border-top: 30px solid #005500;
-	border-right: 30px solid #005500;
-	border-bottom: 30px solid #005500;
-	border-left: 30px solid #005500;
+	border: 30px solid #005500;
 	margin-bottom: auto;
 }
 
@@ -74,13 +71,3 @@ h2 {
 	font-size: 14px;
 	font-style: italic;
 }
-
-
-
-
-
-
-
-
-
-
