--- a/resume-style.css
+++ b/resume-style.css
@@ -1,27 +1,20 @@
-html, body, h1, h2, h3, p, ol, ul, li, a {
-	padding: 0;
-	border: 0;
-	margin: 0;
-}
-
 body {
 	font-family: Arial, "Times New Roman", sans-serif;
 	padding: 10px 30px 10px 30px;
 	border: 30px solid #005500;
-	margin-bottom: auto;
+	margin: 0;
 }
 
 .main-title{
 	text-align: center;
 	text-decoration: underline;
-	padding: 0 0 0 0;
+	padding: 0;
 	margin: 10px auto 0px auto;
 }
 
 .info-list{
 	text-align: center;
-	margin-top: 0px;
-	margin-bottom: 20px;
+	margin: 0 0 20px 0;
 }
 
 .info-list li{
