update format for next stretch

--- a/resume-style.css
+++ b/resume-style.css
@@ -1,58 +1,40 @@
 body {
-	font-family: Arial, "Times New Roman", sans-serif;
-	padding: 10px 30px 10px 30px;
-	margin: 0;
+  font-family: Arial, "Times New Roman", sans-serif;
+  margin: 30px 30px 30px 30px;
+}
+
+h1 {
+  margin: 0;
+  text-align: center;
+  text-decoration: underline;
 }
 
 h2 {
-	text-align: center;
-	text-decoration: underline;
-	margin: 20px auto 25px auto;
+  text-align: center;
+  text-decoration: underline;
+  margin: 20px auto 25px auto;
 }
 
 h3 {
-	margin: 15px auto 4px 15px;
+  margin: 0 15px 0 15px;
 }
 
-.main-title {
-	text-align: center;
-	text-decoration: underline;
-	padding: 0;
-	margin: 10px auto 0px auto;
+div {
+  padding: 5px;
+  !border: 2px solid #000000;
+  margin: 5px;
+}
+
+p {
+  margin: 0 40px 0 40px;
 }
 
 .info-list {
-	text-align: center;
-	margin: 0 auto 0 auto;
-}
-
-.info-list li {
-	font-size: 12px;
-	text-align: center;
-	font-weight: bold;
-	display: inline;
-	padding: 0 5px 0 0;
-	border-right: 2px solid #000000;
-}
-
-.info-list li:last-child {
-	border-right: 0;
+  list-style-type: none;
+  margin: 0;
 }
 
 .job-list {
-	margin: 0 auto 0 30px;
-	list-style-type: none;
-	
-}
-
-.job-list li {
-	margin: 0 0 2px 0;
-}
-
-.skill-body {
-	margin: 0 0 0 30px;
-}
-
-.personal-body {
-	margin: 0 0 0 15px;
+  list-style-type: none;
+  margin: 0;  
 }
