--- a/resume-style.css
+++ b/resume-style.css
@@ -7,6 +7,14 @@ body {
   margin: 30px 30px 30px 30px;
 }
 
+main {
+  border: 2px solid #000000;
+  width: 8.5in;
+  height: 11in;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 h1 {
   text-align: center;
   text-decoration: underline;
@@ -23,7 +31,7 @@ h3 {
 
 section {
   padding: 5px;
-  border: 2px solid #000000;
+  !border: 2px solid #000000;
   margin: 5px;
 }
 
