--- a/resume-style.css
+++ b/resume-style.css
@@ -1,4 +1,4 @@
-body, h1, h2, h3, ul, ol, p, div, section, main {
+body, h1, h2, h3, ul, ol, p, div, section, main, form {
   margin: 10px;
 }
 
@@ -7,12 +7,19 @@ body {
   margin: 30px 30px 30px 30px;
 }
 
-main {
-  border: 2px solid #000000;
+main, form, textarea{
   width: 8.5in;
   height: 11in;
   margin-left: auto;
   margin-right: auto;
+}
+
+main {
+  border: 2px solid #000000;
+}
+
+form {
+  display: none;
 }
 
 h1 {
@@ -48,4 +55,10 @@ section {
 .skill-list {
   list-style-type: none;
   margin: 0;  
+}
+
+.edit-toggle {
+  position: fixed;
+  top: 10px;
+  right: 10px;
 }
